# bitquery-kafka-streams-rust

./: .env  .env.test  .gitignore  AGENT.md  COMPLETE_GUIDE.md  Cargo.toml  Cargo.toml.test  Dockerfile  HANDOUT.md  MIGRATION_GUIDE.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS.md  PUMP_FUN_READY.md  README.md  REFACTORING_PLAN.md  SSL_SETUP_SUMMARY.md  build.rs  ops-node.toml  setup.sh  test_kafka_connection.rs  test_observability_server.rs
benches/: bench_message_processing.rs
bitquery-solana-sdk/: Cargo.toml  build.rs
bitquery-solana-sdk/examples/: basic_consumer.rs  dex_trading_bot.rs  high_volume_processor.rs
bitquery-solana-sdk/src/: batch_processor.rs  client.rs  config.rs  consumer.rs  error.rs  events.rs  filters.rs  lib.rs  resource_manager.rs
bitquery-solana-sdk/src/processors/: dex_processor.rs  mod.rs  transaction_processor.rs
bitquery-solana-sdk/src/schemas/: mod.rs  solana.proto
bitquery-solana-sdk/src/utils/: compression.rs  metrics.rs  mod.rs
bitquery-solana-sdk/tests/: integration_test.rs
certs/: .gitkeep  README.md  client.cer.pem  client.key.pem  server.cer.pem
config/: default.env  docker.env  production.env
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/schemas/: mod.rs
core/src/utils/: base58_cache.rs  circuit_breaker_sdk.rs  compression.rs  mod.rs  retry.rs
deployment/configs/: ops-node-development.conf  ops-node-production.conf  prometheus.yml  prometheus_rules.yml
deployment/kubernetes/: deployment.yaml  hpa.yaml
deployment/scripts/: deploy.sh
deployment/sql/: init.sql
deployment/templates/: ops-node.toml.template
docker/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  healthcheck.sh
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  PUMP_FUN_STREAMING.md  README.md  SSL_CONFIGURATION.md
examples/: basic_consumer.rs  connection_recovery.rs  connection_test.rs  dex_monitor.rs  dex_trading_bot.rs  high_volume_processor.rs  production_config.rs
kafka_test/: Cargo.toml
kafka_test/src/: main.rs
schemas/: dex_block_message.proto  parsed_idl_block_message.proto  token_block_message.proto
scripts/: deploy_blue_green.sh  monitor-pumpfun.sh  monitor_deployment.sh  production-readiness-check.sh  quick_verify.sh  verify_setup.sh
shared/bitquery-solana-core/: Cargo.toml  build.rs
shared/bitquery-solana-core/src/: error.rs  lib.rs
shared/bitquery-solana-core/src/utils/: circuit_breaker.rs  compression.rs  metrics.rs  mod.rs  retry.rs
src/: client.rs  config.rs  consumer.rs  filters.rs  http_server.rs  lib.rs  main.rs  resource_manager.rs
src/core/: mod.rs
src/core/utils/: compression.rs  deduplicator.rs  metrics.rs  retry.rs
src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
src/processors/: dex_processor.rs  mod.rs
src/utils/: mod.rs
streams/kafka/bitquery-solana-kafka/: Cargo.toml
streams/kafka/bitquery-solana-kafka/examples/: basic_consumer.rs  connection_recovery.rs  connection_test.rs  dex_monitor.rs  dex_trading_bot.rs  direct_connection_test.rs  health_check.rs  high_volume_processor.rs  production_config.rs
streams/kafka/bitquery-solana-kafka/src/: batch_processor.rs  client.rs  config.rs  consumer.rs  error.rs  events.rs  filters.rs  lib.rs  resource_manager.rs
streams/kafka/bitquery-solana-kafka/src/processors/: dex_processor.rs
streams/kafka/bitquery-solana-kafka/src/schemas/: solana.proto
streams/kafka/bitquery-solana-kafka/src/utils/: base58_cache.rs  compression.rs  metrics.rs  mod.rs
streams/kafka/bitquery-solana-kafka/tests/: dex_trade_tests.rs  integration_test.rs
streams/kafka/bitquery-solana-sdk/: Cargo.toml  build.rs
streams/kafka/bitquery-solana-sdk/src/: client.rs  error.rs  lib.rs
streams/kafka/bitquery-solana-sdk/src/processors/: dex_processor.rs  transaction_processor.rs
streams/kafka/bitquery-solana-sdk/src/schemas/: mod.rs
streams/kafka/bitquery-solana-sdk/src/utils/: deduplicator.rs  metrics.rs  retry.rs
streams/kafka/bitquery-solana-sdk/tests/: integration_test.rs
tests/: integration_pipeline.rs  integration_test.rs  observability_integration.rs
tools/: Cargo.toml
tools/src/: extended_test.rs  main.rs
trading/hft/: Cargo.toml  Frankfurt_VPS_Deployment_Guide.md
trading/hft/ops-node/: Cargo.toml  build.rs  deploy.sh  ops-node.toml
trading/hft/ops-node/src/: benchmarks.rs  client.rs  config.rs  error.rs  grpc_client.rs  lib.rs  main.rs  memory.rs  network.rs  state.rs  tx_sender.rs
trading/hft/ops-node/src/grpc_generated/: mod.rs
trading/hft/ops-node/src/strategies/: mod.rs  sniper.rs
trading/hft/proto/jito/: shredstream.proto
trading/hft/proto/yellowstone/: geyser.proto
