[workspace]
resolver = "2"
members = [
    "shared/bitquery-solana-core",
    "streams/kafka/bitquery-solana-kafka",
    "trading/hft/ops-node"
]

# Shared workspace dependencies to ensure version consistency
[workspace.dependencies]
# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-channel = "2.3"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"

# Compression
lz4_flex = "0.11"

# Encoding
bs58 = "0.5"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dashmap = "6.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.10.0", features = ["v4"] }

# Logging and metrics
tracing = "0.1"
metrics = "0.23"

# Optional dependencies
jemallocator = "0.5"

# Build dependencies
prost-build = "0.13"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
