[package]
name = "bitquery-solana-sdk"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance, production-ready Rust SDK for Bitquery Solana Kafka streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bitquery-solana-sdk"
keywords = ["blockchain", "solana", "kafka", "streaming", "bitquery"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-channel = "2.3"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"

# Compression
lz4_flex = "0.11"

# Encoding
bs58 = "0.5"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dashmap = "6.0" # May not be used in new version, review later
lru = "0.12" # May not be used if Base58Cache is removed or changed
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12" # For RwLock in ResourceManager

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.23" # Updated version from prompt
metrics-exporter-prometheus = { version = "0.15", optional = true } # Updated version
prometheus = { version = "0.13", optional = true } # Kept for exporter

# Memory management / Concurrency
crossbeam-channel = "0.5" # For BatchProcessor (though async-channel is used there) - review usage
num_cpus = "1.16" # For default parallel_workers

[dependencies.jemallocator]
version = "0.5"
optional = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
criterion = "0.5" # For benchmarks

[features]
default = ["metrics"] # Default to having metrics enabled
metrics = ["dep:prometheus", "dep:metrics-exporter-prometheus", "dep:metrics"] # Corrected feature gating
high-performance = ["jemallocator"]

[[bench]]
name = "processing"
harness = false

# Examples - paths will be relative to this Cargo.toml
[[example]]
name = "basic_consumer"
path = "examples/basic_consumer.rs"

[[example]]
name = "dex_trading_bot"
path = "examples/dex_trading_bot.rs"

[[example]]
name = "high_volume_processor"
path = "examples/high_volume_processor.rs"
