[package]
name = "bitquery-solana-sdk"
version = "2.0.0"
edition = "2021"
authors = ["Zolca Team"]
description = "High-performance, production-ready Rust SDK for Bitquery Solana Kafka streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bitquery-solana-sdk"
keywords = ["blockchain", "solana", "kafka", "streaming", "bitquery"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# Shared core library
bitquery-solana-core = { path = "../shared/bitquery-solana-core" }

# Kafka
rdkafka = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
dashmap = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Optional high-performance allocator
jemallocator = { workspace = true, optional = true }

[dev-dependencies]
num_cpus = "1.16"
mockall = "0.12"
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
high-performance = ["bitquery-solana-core/high-performance", "jemallocator"]

[[bench]]
name = "processing"
harness = false

[[example]]
name = "basic_consumer"
path = "examples/basic_consumer.rs"

[[example]]
name = "dex_trading_bot"
path = "examples/dex_trading_bot.rs"

[[example]]
name = "high_volume_processor"
path = "examples/high_volume_processor.rs"
