[package]
name = "kafka_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
env_logger = "0.9"
log = "0.4"
dotenv = "0.15.0"

[[bin]]
name = "comprehensive_test"
path = "src/bin/comprehensive_test.rs"
