[package]
name = "bitquery-solana-sdk"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"] # Please replace with actual author info
description = "High-performance, production-ready Rust SDK for Bitquery Solana Kafka streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bitquery-solana-sdk" # Please replace
keywords = ["blockchain", "solana", "kafka", "streaming", "bitquery"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3" # For StreamExt and other utilities if needed by examples/tests
async-trait = "0.1" # For EventProcessor trait
async-channel = "2.3" # For BatchProcessor

# Protobuf
prost = "0.13"
prost-types = "0.13" # For Timestamp, etc., if used in protos

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For SolanaEvent.data
bytes = "1.7" # For prost bytes fields

# Compression
lz4_flex = "0.11" # For decompressing Kafka messages

# Encoding
bs58 = "0.5" # For Base58 encoding/decoding if Base58Cache is used
hex = "0.4" # Potentially for signature or hash display/parsing

# Error handling
thiserror = "1.0" # For custom error types
anyhow = "1.0" # For example error handling, not typically in library API

# Utilities
# dashmap = "6.0" # Marked for review, not in new explicit file list for utils
# lru = "0.12" # Marked for review, Base58Cache/LRUDeduplicator not in new explicit list
chrono = { version = "0.4", features = ["serde"] } # For time/duration if needed beyond std::time
once_cell = "1.19" # For lazy static initialization (e.g. metrics in my older version)
parking_lot = "0.12" # For ResourceManager's RwLock
uuid = { version = "1.10.0", features = ["v4"] } # Added for unique group_id generation in config.rs

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # JSON feature for structured logs

# Metrics
metrics = "0.23" # Main metrics facade
metrics-exporter-prometheus = { version = "0.15", optional = true } # Prometheus exporter
prometheus = { version = "0.13", optional = true } # Still needed by metrics-exporter-prometheus

# Memory management / Concurrency
crossbeam-channel = "0.5" # Listed in prompt's Cargo.toml, review if actually used vs async-channel
num_cpus = "1.16" # For default parallel_workers in ProcessingConfig

[dependencies.jemallocator]
version = "0.5"
optional = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
mockall = "0.12" # For mocking traits in tests
tokio-test = "0.4" # For async tests
criterion = "0.5" # For benchmarks
tempfile = "3.10" # For creating temp files in integration tests (e.g. SSL certs)

[features]
default = ["metrics"] # Default to having metrics enabled
# Corrected feature gating for optional dependencies
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:prometheus"]
high-performance = ["dep:jemallocator"]

# Benchmarks
[[bench]]
name = "processing" # Example benchmark target name
harness = false # Indicates custom benchmark harness might be used

# Examples - paths are relative to this Cargo.toml (i.e., inside this SDK project)
[[example]]
name = "basic_consumer"
path = "examples/basic_consumer.rs"

[[example]]
name = "dex_trading_bot"
path = "examples/dex_trading_bot.rs"

[[example]]
name = "high_volume_processor"
path = "examples/high_volume_processor.rs"
