[package]
name = "ops-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.39", features = ["full", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
monoio = { version = "0.2", features = ["iouring"] }
smol = "2.0"

# gRPC / Protobuf
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tower = "0.4"

# Solana
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
spl-token = "4.0"
spl-associated-token-account = "3.0"

# Memory & Performance
bumpalo = "3.16"
zerocopy = { version = "0.7", features = ["derive"] }
smallvec = "1.13"
crossbeam = "0.8"
crossbeam-queue = "0.3"
memmap2 = "0.9"
rkyv = { version = "0.7", features = ["validation"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hdrhistogram = "7.5"
dashmap = "6.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Network Optimization
socket2 = "0.5"
io-uring = "0.6"
libc = "0.2"

# Metrics & Monitoring
prometheus = "0.13"
warp = "0.3"

# Other
chrono = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
ahash = "0.8"
num_cpus = "1.16"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
sysinfo = "0.30"
ctrlc = "3.4.4"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

[profile.release.build-override]
opt-level = 3
